<resources>
    <string name="app_name" >Online Live TV</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close" >Close navigation drawer</string>

    <string name="made_with_in" >صنع بكل ❤ بواسطة دارك</string>

    <!--Navigation drawer -->
    <string name="nav_home">الرئيسية</string>
    <string name="nav_settings">الاعدادات</string>
    <string name="nav_profile">الحساب</string>
    <string name="categories">التصنيفات</string>
    <string name="latest">الاخيرة</string>
    <string name="recently">السجل</string>
    <string name="trending">رائج الان</string>
    <string name="countries">البلاد</string>
    <string name="favourite">المفضلة</string>
    <string name="banner">الشعار</string>
    <string name="live">مباشر</string>
    <string name="live_event">المباريات المباشرة</string>

    <!-- Search  -->
    <string name="search_live">بحث مباشر</string>
    <string name="search_categories">بحث في التصنيفات</string>
    <string name="search_event">البحث عن احداث</string>


    <!--Login/Register -->
    <string name="dashboard">لوحة التحكم</string>
    <string name="search">بحث</string>
    <string name="login">تسجيل الدخول</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="welcome">مرحباً</string>
    <string name="email_id">الايميل</string>
    <string name="password">الباسورد</string>
    <string name="remember_me">تذكرني</string>
    <string name="logout_success">تم تسجيل الخروج</string>
    <string name="new_to_logistics">New to Logistics?</string>
    <string name="login_with_google">تسجيل الدخول بواسطة جوجل</string>
    <string name="sign_in_to_continue">سجل دخول للمتابعة</string>
    <string name="sign_up">انشاء الحساب</string>
    <string name="register">انشئ حساب</string>
    <string name="registering">جار انشاء الحساب..</string>
    <string name="full_name">الاسم الكامل</string>
    <string name="telephone_number">رقم الهاتف</string>
    <string name="confirm_password">تأكيد الباسورد</string>
    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="terms_and_conditions">السياسة وشروط الاستخدام</string>
    <string name="by_signing_up_re_agree_to_oue">بإنشاء حساب فأنت توافق على </string>
    <string name="and">و</string>
    <string name="skip">تخطي</string>
    <string name="already_have_an_account">هل لديك حساب بالفعل؟</string>
    <string name="privacy_policy">سياسة الخصوصية</string>

    <!--Forgot Password-->
    <string name="forgot_pass">هل نسيت الباسورد؟</string>
    <string name="forgot_password_message">أدخل عنوان بريدك الإلكتروني الصحيح أدناه وسنرسل إليك بريدًا إلكترونيًا يحتوي على تعليمات حول كيفية تغيير كلمة المرور الخاصة بك</string>

    <!--Profile-->
    <string name="profile">الحساب</string>
    <string name="delete_account">حذف الحساب</string>
    <string name="edit_account">تعديل حسابك</string>
    <string name="sure_delete_account">هل انت متأكد من حذف حسابك؟</string>
    <string name="not_log">لم تسجل دخول</string>

    <!--About-->
    <string name="about">من نحن؟</string>
    <string name="rate_the_app">قيم التطبيق</string>
    <string name="love_this_app">هل تحب هذا التطبيق ؟ اخبرنا على جوجل بلاي كيف يمكننا تحسينه</string>
    <string name="share_the_app">شارك التطبيق مع عائلتك والاشخاص المفضلين</string>
    <string name="company">الشركة</string>
    <string name="email">الايميل</string>
    <string name="version">الاصدار</string>
    <string name="website">الموقع</string>
    <string name="contact">تواصل</string>
    <string name="share">شارك</string>
    <string name="more_apps">مزيد من التطبيقات</string>

    <!--Feedback-->
    <string name="feedback">الأراء</string>
    <string name="send_feedback">ارسال رأيك</string>
    <string name="report_any_issues">قم بالإبلاغ عن أي مشكلات قد تواجهها بشأن محتوى التطبيق أو وظائفه.</string>
    <string name="please_describe_the_problem">يرجى وصف المشكلة…</string>
    <string name="submit">ارسال</string>

    <!--Rating-->
    <string name="rating">تقييم</string>
    <string name="submit_rating">ارسال التقييم</string>
    <string name="select_rating">اختر التقييم</string>
    <string name="thanks_for_rating">شكراً على تقييمك</string>
    <string name="report_message">ادخل الوصف هنا…</string>

    <!-- Suggestion -->
    <string name="suggestion">اقتراح</string>
    <string name="title_suggestion">العنوان</string>
    <string name="enter_your_title_here_suggestion">ادخل عنوان الاقتراح هنا</string>
    <string name="description_suggestion">الوصف</string>
    <string name="enter_your_description_here_suggestion">ادخل اقتراحك هنا</string>

    <!--Dialog-->
    <string name="no">لا</string>
    <string name="ok">حسناً</string>
    <string name="yes">نعم</string>
    <string name="exit">خروج</string>
    <string name="retry">اعادة المحاولة</string>
    <string name="cancel">اغلاق</string>
    <string name="loading">جاري التحميل…</string>
    <string name="invalid_user">مستخدم خاطئ</string>
    <string name="sure_exit">هل انت متأكد من الخروج من التطبيق؟</string>
    <string name="upgrade">تخديث</string>
    <string name="its_time_to_upgrade">حان الوقت للترقية إلى أحدث إصدار من تطبيقنا للحصول على أفضل تجربة.</string>
    <string name="do_it_now">افعلها الان</string>
    <string name="maintenance">صيانة</string>
    <string name="temporarily_down_for_maintenance">معطل مؤقتا للصيانة</string>
    <string name="we_are_performing_scheduled">نحن نقوم بإجراء الصيانة المجدولة. يجب أن نعود إلى الإنترنت قريبًا.</string>
    <string name="try_again_later">حاول مرة أخرى لاحقًا</string>
    <string name="select_language">اختر اللغة</string>
    <string name="sniffing_detected">Sniffing Detected</string>
    <string name="turn_off_all_sniffers_tools">Turn off all sniffers Tools and Vpn tools to access app</string>
    <string name="developer_mode">وضع المطور</string>
    <string name="turn_off_developer_mode">Turn off Developer Mode to access the app</string>
    <string name="audio_tracks">Audio Tracks</string>
    <string name="video_tracks">Video Tracks</string>
    <string name="select_font_size">اختر حجم الخط</string>

    <!--MSG-->
    <string name="err_name">ادخل اسمك</string>
    <string name="err_email">الايميل</string>
    <string name="err_password">الباسورد</string>
    <string name="err_cpassword">تأكيد الباسورد</string>
    <string name="err_pass_not_match">الباسورد غير متطابق</string>
    <string name="err_pass_end_space">يرجى عدم اضافة مسافة في النهاية</string>
    <string name="err_password_sort">هذا الباسورد قصير جدا</string>
    <string name="err_invalid_email">ايميل غير صالح</string>
    <string name="err_phone">رقم الهاتف</string>
    <string name="err_gender">تحديد الجنس</string>
    <string name="err_cannot_use_features">لا يمكن استخدام بعض الميزات دون الحصول على إذن مطلوب</string>
    <string name="err_cannot_empty">لا يمكن أن يكون الحقل فارغاً</string>
    <string name="err_login_google">حدث خطأ أثناء تسجيل الدخول باستخدام جوجل</string>
    <string name="err_no_data_found">لم يتم العثور على بيانات</string>
    <string name="err_no_cat_found">لم يتم العثور على فئات</string>
    <string name="err_server">خطأ في الخادم</string>
    <string name="err_unauthorized_access">Unauthorized Access</string>
    <string name="err_server_not_connected">Server not connected</string>
    <string name="err_internet_not_connected">يرجى الاتصال بالإنترنت</string>
    <string name="err_try_internet_connected">الرجاء الاتصال بالإنترنت والمحاولة مرة أخرى</string>
    <string name="upload_success">نجح الرفع</string>
    <string name="already_added">تمت اضافته بالفعل</string>
    <string name="stream_not_found">لسوء الحظ، لم يتم العثور على عنوان URL للبث، يرجى الإبلاغ عنه</string>
    <string name="select_image">حدد الصورة</string>
    <string name="try_again">جرب مرة اخرى</string>
    <string name="refresh">تحديث</string>
    <string name="no_notification">لا يوجد اشعارات</string>
    <string name="error_no_radio_selected">لم يتم تحديد الراديو</string>
    <string name="sure_delete">هل أنت متأكد أنك تريد حذف هذا؟</string>
    <string name="delete">حذف</string>
    <string name="please_wait_a_minute">من فضلك انتظر دقيقة</string>

    <!--Settings-->
    <string name="settings">الإعدادات</string>
    <string name="app_theme">المظهر</string>
    <string name="dark_or_light_mode">الوضع الفاتح \ الداكن</string>
    <string name="theme_classic" >كلاسيك</string>
    <string name="theme_dark_grey" >رمادي داكن</string>
    <string name="theme_dark_blue" >ازرق داكن</string>
    <string name="theme_dark" >داكن</string>
    <string name="cache">التخزين المؤقت</string>
    <string name="clear_cache">تنظيف التخزين المؤقت</string>
    <string name="cache_cleared">تم تنظيف الملفات المؤقتة</string>
    <string name="clearing_cache">جاري تنظيف الملفات المؤقتة</string>
    <string name="this_app_privacy_policy">سياسة الخصوصية للتطبيق</string>
    <string name="social_links">روابط التواصل الاجتماعي, السياسة</string>
    <string name="this_app_terms">سياسة الخصوصية وشروط الاستخدام</string>
    <string name="enable_push_notification">تفعيل الاشعارات</string>
    <string name="on_off_notification">تعطيل/تفعيل الاشعارات</string>
    <string name="deletion_policy">بيانات الحذف</string>
    <string name="completely_delete_you_account">يمكنك حذف حسابك</string>
    <string name="notification">الاشعارات</string>
    <string name="to_receive_notification">لإستقبال الاشعارات</string>

    <!--Subscribe-->
    <string name="subscription_plan">نوع الاشتراك</string>
    <string name="subscription_msg">اختر الخطة بناءً على استخدامك. يوجد أدناه اسم الخطة والسعر وأيام الصلاحية.</string>
    <string name="select_subscription_plan">اختر نوع الاشتراك</string>
    <string name="subscription_proceed">يتم</string>
    <string name="plan_day_for">For %s</string>
    <string name="premium_pack">الحزمة المميزة</string>
    <string name="premium_note">مع الخطة المميزة. يمكنك الاستمتاع بتجربة خالية من الإعلانات!</string>
    <string name="premium_a_title">بثوث مباشرة مميزة</string>
    <string name="premium_a_note">بثوث مميزة غير محدودة</string>
    <string name="premium_b_title">بدون اعلانات</string>
    <string name="premium_b_note">استخدم التطبيق بدون إعلانات</string>
    <string name="user_info">بيانات الحساب</string>
    <string name="choose_plan">لقد حددت</string>
    <string name="choose_plan_1">لقد سجلت الدخول كـ </string>
    <string name="change_plan">تغيير الاشتراك</string>
    <string name="premium_content">You dont have access to premium content kindly purchase subscription to watch this content or LOGIN with premium account.</string>
    <string name="premium">مُميز</string>
    <string name="casty_introduction_text">استخدم هذا الزر لمشاركة الشاشة</string>
    <string name="cast_youtube">Youtube and Embedded link direct does not cast</string>
    <string name="cast_play_custom">Playing in Connected Chromecast</string>
    <string name="subscribe_now">اشترك الان</string>

    <string name="count">%s مشاهد</string>

    <string name="dont_show_alert">لا تظهر تنبيه</string>
    <string name="watch_ad">مشاهدة اعلان</string>
    <string name="watch_video_for">شاهد اعلان لتشغيل المباراة او انضم للأشتراك المميز للأستمتاع بالمباريات بدون اعلانات </string>
    <!--Don't Change language-->
    <string name="todo">TODO</string>
</resources>