<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_1sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_text_fields"
                app:tint="?ns_title" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_9sdp"
                android:text="@string/select_font_size"
                android:textColor="?ns_title"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bar_selector"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_close"
                app:tint="?ns_title" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp">

            <RadioButton
                android:id="@+id/rd_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="Extra Small"
                android:textAlignment="viewStart"
                android:textColor="?ns_title_sub"
                android:layout_marginBottom="@dimen/_5sdp"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/rd_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="Small"
                android:textAlignment="viewStart"
                android:textColor="?ns_title_sub"
                android:layout_marginBottom="@dimen/_5sdp"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/rd_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="Medium"
                android:textAlignment="viewStart"
                android:textColor="?ns_title_sub"
                android:layout_marginBottom="@dimen/_5sdp"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/rd_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="Large"
                android:textAlignment="viewStart"
                android:textColor="?ns_title_sub"
                android:layout_marginBottom="@dimen/_5sdp"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/rd_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="Extra Large"
                android:textAlignment="viewStart"
                android:textColor="?ns_title_sub"
                tools:ignore="HardcodedText" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_danger"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="?ns_white"
                android:textSize="@dimen/_13ssp"
                android:layout_marginEnd="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_primary"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="?ns_white"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>